fix horizontal overflow / mobile version

--- a/apps/storefront/app/globals.css
+++ b/apps/storefront/app/globals.css
@@ -82,9 +82,14 @@
     @apply border-border;
   }
 
+  html,
+  body {
+    overflow-x: hidden;
+    max-width: 100vw;
+  }
+
   html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
   }
 
   body {
